Fixed one more layout issue

--- a/style/index.css
+++ b/style/index.css
@@ -83,16 +83,6 @@ body
 	padding-right: 16px;
 }
 
-@media (max-width: 500px)
-{
-	.page
-	{
-		width: calc(100% - 16px);
-		padding-left: 8px;
-		padding-right: 8px;
-	}
-}
-
 
 
 header
@@ -703,6 +693,15 @@ mjx-container
 	display: flex;
 	justify-content: center;
 	margin-top: 85vh;
+}
+
+@media (max-width: 500px)
+{
+	#banner ~ #content-container
+	{
+		margin-left: -8px;
+		margin-right: -8px;
+	}
 }
 
 #content
